fix(web-components): remove min-width on the title area that was causing an overflow
Remove min-width on the title area for extra small breakpoint as this was causing the page header
component page to overflow for mobile devices, make text field width 100% for mobile devices. This
can be overwritten by the end user using the --input-width variable on the text field, update visual
tests for page header, update package-lock

. #77

--- a/packages/web-components/src/components/ic-page-header/ic-page-header.css
+++ b/packages/web-components/src/components/ic-page-header/ic-page-header.css
@@ -92,12 +92,22 @@ header.tabs {
 }
 
 @media screen and (max-width: 576px) {
+  ::slotted(ic-text-field) {
+    --input-width: 100%;
+
+    max-width: 320px;
+  }
+
   .main-content {
     grid-template-areas:
       "title-area"
       "action-area"
       "input-area";
     justify-content: flex-start;
+  }
+
+  .title-area {
+    min-width: 0;
   }
 
   .action-area {
